RESOLVED FIXED 151309
Tatechuyoko in ruby sits too high
https://bugs.webkit.org/show_bug.cgi?id=151309
Summary Tatechuyoko in ruby sits too high
Dave Hyatt
Reported 2015-11-16 09:42:54 PST
This is a regression from a previous fix to try to fix some off center positioning of tate-chu-yoko.
Attachments
Patch (122.46 KB, patch)
2015-11-16 09:47 PST, Dave Hyatt
buildbot: commit-queue-
Archive of layout-test-results from ews100 for mac-mavericks (643.70 KB, application/zip)
2015-11-16 10:31 PST, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-mavericks-wk2 (747.24 KB, application/zip)
2015-11-16 10:35 PST, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-yosemite (775.99 KB, application/zip)
2015-11-16 10:42 PST, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-yosemite (774.50 KB, application/zip)
2015-11-16 12:29 PST, Build Bot
no flags
Patch (123.39 KB, patch)
2015-11-16 14:51 PST, Dave Hyatt
no flags
Current broken behavior (8.49 KB, image/png)
2015-11-18 11:13 PST, Dave Hyatt
no flags
Setting the origin to minXMaxYCorner only (9.06 KB, image/png)
2015-11-18 11:14 PST, Dave Hyatt
no flags
Adding in the "centering" step. (deleted)
2015-11-18 11:14 PST, Dave Hyatt
no flags
Shifting by the height of the entire glyph (deleted)
2015-11-18 11:15 PST, Dave Hyatt
no flags
Shift by the entire height of the glyph (9.81 KB, image/png)
2015-11-18 11:24 PST, Dave Hyatt
no flags
Apply the centering step (10.11 KB, image/png)
2015-11-18 11:25 PST, Dave Hyatt
no flags
With Patch (72.63 KB, image/png)
2015-11-18 19:31 PST, Myles C. Maxfield
no flags
Without Patch (73.13 KB, image/png)
2015-11-18 19:31 PST, Myles C. Maxfield
no flags
Test Page (231 bytes, text/html)
2015-11-18 19:31 PST, Myles C. Maxfield
no flags
Same Test Page with Japanese Characters (236 bytes, text/html)
2015-11-18 19:46 PST, Myles C. Maxfield
no flags
Needs tests (3.83 KB, patch)
2015-11-18 22:10 PST, Myles C. Maxfield
no flags
Patch (8.17 KB, patch)
2015-11-18 22:38 PST, Myles C. Maxfield
no flags
Dave Hyatt
Comment 1 2015-11-16 09:47:08 PST
Build Bot
Comment 2 2015-11-16 10:31:27 PST
Comment on attachment 265587 [details] Patch Attachment 265587 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/437640 New failing tests: fast/text/text-combine-rendering.html
Build Bot
Comment 3 2015-11-16 10:31:29 PST
Created attachment 265589 [details] Archive of layout-test-results from ews100 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-mavericks Platform: Mac OS X 10.9.5
Jon Lee
Comment 4 2015-11-16 10:33:24 PST
Build Bot
Comment 5 2015-11-16 10:35:50 PST
Comment on attachment 265587 [details] Patch Attachment 265587 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/437648 New failing tests: fast/text/text-combine-rendering.html
Build Bot
Comment 6 2015-11-16 10:35:52 PST
Created attachment 265590 [details] Archive of layout-test-results from ews105 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Build Bot
Comment 7 2015-11-16 10:42:13 PST
Comment on attachment 265587 [details] Patch Attachment 265587 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/437641 New failing tests: fast/text/text-combine-rendering.html
Build Bot
Comment 8 2015-11-16 10:42:15 PST
Created attachment 265591 [details] Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 9 2015-11-16 12:29:20 PST
Comment on attachment 265587 [details] Patch Attachment 265587 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/437926 New failing tests: fast/text/text-combine-rendering.html
Build Bot
Comment 10 2015-11-16 12:29:23 PST
Created attachment 265604 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Dave Hyatt
Comment 11 2015-11-16 14:51:29 PST
WebKit Commit Bot
Comment 12 2015-11-16 14:54:24 PST
Attachment 265625 [details] did not pass style-queue: ERROR: LayoutTests/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 13 2015-11-16 20:29:45 PST
Comment on attachment 265587 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=265587&action=review > Source/WebCore/rendering/RenderCombineText.cpp:82 > + result.move(0, m_combinedTextSize.height()); Let's discuss this tomorrow. I'm not sure this is right.
Myles C. Maxfield
Comment 14 2015-11-17 12:20:59 PST
Comment on attachment 265625 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=265625&action=review > Source/WebCore/rendering/RenderCombineText.cpp:82 > + result.move(0, m_combinedTextSize.height()); I'm going to investigate this.
Dave Hyatt
Comment 15 2015-11-18 11:13:20 PST
I am attaching some screenshots to help illustrate the correctness of the patch.
Dave Hyatt
Comment 16 2015-11-18 11:13:45 PST
Created attachment 265754 [details] Current broken behavior
Dave Hyatt
Comment 17 2015-11-18 11:14:15 PST
Created attachment 265755 [details] Setting the origin to minXMaxYCorner only
Dave Hyatt
Comment 18 2015-11-18 11:14:37 PST
Created attachment 265756 [details] Adding in the "centering" step.
Dave Hyatt
Comment 19 2015-11-18 11:15:03 PST
Created attachment 265757 [details] Shifting by the height of the entire glyph
Dave Hyatt
Comment 20 2015-11-18 11:20:04 PST
I think these screenshots make it pretty obvious that my patch is correct. When you set the origin just to the minXMaxYCorner of the box, the entire glyph starts just outside the box with its bottom edge aligned with the top edge of the box. Shifting down by the entire glyph height (top + bottom) puts the top edge of the glyph flush with the top edge. Then all that remains is to center.
Dave Hyatt
Comment 21 2015-11-18 11:21:24 PST
The content of attachment 265756 [details] has been deleted by Dave Hyatt <hyatt@apple.com> without providing any reason. The token used to delete this attachment was generated at 2015-11-18 11:21:21 PST.
Dave Hyatt
Comment 22 2015-11-18 11:21:42 PST
The content of attachment 265757 [details] has been deleted by Dave Hyatt <hyatt@apple.com> without providing any reason. The token used to delete this attachment was generated at 2015-11-18 11:21:40 PST.
Dave Hyatt
Comment 23 2015-11-18 11:24:20 PST
Created attachment 265762 [details] Shift by the entire height of the glyph
Dave Hyatt
Comment 24 2015-11-18 11:25:31 PST
Created attachment 265763 [details] Apply the centering step
Myles C. Maxfield
Comment 25 2015-11-18 14:04:17 PST
(In reply to comment #24) > Created attachment 265763 [details] > Apply the centering step Your approach and mine differ in that you are lowering the glyph by a distance of glyphOverflow.bottom. However, the screenshots you uploaded use glyphs which don't include any descenders, thereby making glyphOverflow.bottom = 0.
Myles C. Maxfield
Comment 26 2015-11-18 19:31:09 PST
Created attachment 265831 [details] With Patch
Myles C. Maxfield
Comment 27 2015-11-18 19:31:28 PST
Created attachment 265832 [details] Without Patch
Myles C. Maxfield
Comment 28 2015-11-18 19:31:57 PST
Created attachment 265833 [details] Test Page
Myles C. Maxfield
Comment 29 2015-11-18 19:32:24 PST
Based on the screenshots of the test page, it does not look like this patch is correct.
Myles C. Maxfield
Comment 30 2015-11-18 19:33:21 PST
Comment on attachment 265625 [details] Patch r- based on the screenshots I've uploaded.
Myles C. Maxfield
Comment 31 2015-11-18 19:46:18 PST
Created attachment 265836 [details] Same Test Page with Japanese Characters
Myles C. Maxfield
Comment 32 2015-11-18 19:57:10 PST
It's wrong for glyphs which don't get rotated in vertical-text (like Japanese text)
Myles C. Maxfield
Comment 33 2015-11-18 20:05:21 PST
The difference between the two cases is if (platformData.orientation() == Vertical) inside showGlyphsWithAdvances()
Myles C. Maxfield
Comment 34 2015-11-18 20:33:53 PST
Disregard that last comment. Both are horizontal.
Myles C. Maxfield
Comment 35 2015-11-18 21:05:07 PST
(In reply to comment #34) > Disregard that last comment. Both are horizontal. This is because when we call RenderText::width() inside RenderCombineText::combineText(), this computes the width incorporating textOrientation and writingMode. Therefore, for CJK characters, this "width" returns the distance from the top of the glyph to the bottom of the glyph. For Latin characters, this "width" returns the distance from the left of the glyph to the right of the glyph. However, when combining the text, we always want the width to be from the left of the glyph to the right of the glyph. (Or the other way - the important thing is that we are consistent between CJK & Latin.) The reason Hyatt's patch appears to work (even though it doesn't) is because CJK characters are often squarish and often don't have much descent.
Myles C. Maxfield
Comment 36 2015-11-18 21:55:56 PST
We need to make sure that during RenderText::width(), style().fontCascade().fontDescription().orientation() is Horizontal.
Myles C. Maxfield
Comment 37 2015-11-18 22:10:24 PST
Created attachment 265847 [details] Needs tests
Myles C. Maxfield
Comment 38 2015-11-18 22:38:55 PST
WebKit Commit Bot
Comment 39 2015-11-19 11:16:51 PST
Comment on attachment 265849 [details] Patch Clearing flags on attachment: 265849 Committed r192639: <http://trac.webkit.org/changeset/192639>
WebKit Commit Bot
Comment 40 2015-11-19 11:16:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.